--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 <h1>Hello, world!!!</h1>
-I am learning to work in Git
+I am learning to work in Git <br>
+Git - system for control of version
 </body>
 </html>
