--- a/hello.html
+++ b/hello.html
@@ -5,7 +5,6 @@
 </head>
 <body>
 <h1>Hello, world!!!</h1>
-I am learning to work in Git <br>
-Git - system for control of version
+I am learning to work in Git
 </body>
 </html>
